<resources>
    <string name="app_name">My Application</string>
    <string name="welcomestring">Welcome to Android Studio!</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_up">注册</string>
    <string name="action_to_mainpage">主页面</string>
    <string name="error_empty_username">请输入您的用户名！</string>
    <string name="error_empty_password">请输入密码！</string>
    <string name="error_incorrect_password">密码错误！</string>
    <string name="error_none_user">请您先注册，再访问我们网站!</string>
    <string name="succeed_login_in">登录成功！</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Strings related to sign up-->
    <string name="title_activity_signup">Sign up</string>
    <string name="sign_up_username">用户名</string>
    <string name="sign_up_email">邮箱</string>
    <string name="sign_up_password">密码</string>
    <string name="action_sign_up_confirm">注册</string>
    <string name="action_sign_up_cancel">取消</string>
    <string name="error_exist_username">用户名已存在！</string>
    <string name="error_empty_email">请输入邮箱！</string>
    <string name="error_fail_sign_up">注册失败!</string>
    <string name="succeed_sign_up">注册成功！</string>

    <!-- Strings related to sign out-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">email@user</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_menu">Welcome!</string>
    <string name="nav_left_bar1">命名实体标注</string>
    <string name="nav_left_bar2">关系标注</string>
    <string name="nav_left_bar3">工具</string>
    <string name="nav_left_bar4">设置</string>
    <string name="nav_left_bar5">退出</string>
    <string name="nav_left_bar_tittle">Others</string>
    <string name="welcome_words">Welcome to my APP!</string>
    <string name="left_entity_display">左实体</string>
    <string name="right_entity_display">右实体</string>
    <string name="relation_display">关系</string>
    <string name="toLastPage">上一页</string>
    <string name="toNextPage">下一页</string>
    <string name="action_upload">提交</string>


</resources>
