<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_name_entity"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_left_bar1" />
        <item
            android:id="@+id/nav_relation"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_left_bar2" />
        <item
            android:id="@+id/nav_tool"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_left_bar3" />
    </group>

    <item android:title="@string/nav_left_bar_tittle">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_left_bar4" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_left_bar5" />
        </menu>
    </item>

</menu>
