<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainMenuActivity"
    tools:showIn="@layout/app_bar_main_menu">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"
        android:fadingEdge="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:isScrollContainer="true">

        <TextView
        android:id="@+id/response_title"
        android:textIsSelectable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:textSize="24sp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="实体标注与关系标注"/>

        <TextView
            android:id="@+id/response_content"
            android:textIsSelectable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:textSize="20sp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="选中文字后点击人名或职位可分别对人名和职位进行实体标注"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible"/>

        <TableLayout
            android:id="@+id/entity_relation_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:id="@+id/relation_display_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/left_entity_title"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:scrollbars="horizontal"
                    android:singleLine="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:text="@string/left_entity_display"/>
                <TextView
                    android:id="@+id/right_entity_title"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:scrollbars="horizontal"
                    android:singleLine="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:text="@string/right_entity_display"/>
                <TextView
                    android:id="@+id/relation_title"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:scrollbars="horizontal"
                    android:singleLine="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:text="@string/relation_display"/>

            </TableRow>

        </TableLayout>
    </LinearLayout>
</ScrollView>
</android.support.constraint.ConstraintLayout>